--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern-task-manager",
   "version": "1.0.0",
-  "description": "Task manager created using the MERN stack",
+  "description": "Task manager created using the MERN stack.",
   "keywords": [
     "mern",
     "node",
@@ -21,6 +21,7 @@
     "@dotenvx/dotenvx": "^1.44.1",
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
+    "express-xss-sanitizer": "^2.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "jest": "^29.7.0",
     "node-mocks-http": "^1.17.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.1"
   }
 }
